base/016-rule-metadata/fuse-016-rule-metadata-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rule-metadata
  name: rule-metadata
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rule-metadata
---
